--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,2 +1,5 @@
-<h1>Cocktails#new</h1>
-<p>Find me in app/views/cocktails/new.html.erb</p>
+<h1>Cocktail new</h1>
+<p>Create a new cocktail - be creative</p>
+
+<%= render 'form', cocktail: @cocktail %>
+<%= link_to 'Back', cocktails_path %>
