backend part done - ready for production

--- a/app/views/cocktails/edit.html.erb
+++ b/app/views/cocktails/edit.html.erb
@@ -1,5 +1,5 @@
 <h1>Cocktail update</h1>
-<p>Update the name of the cocktail</p>
+<p>Update the cocktail</p>
 
 <%= render 'form', cocktail: @cocktail %>
 <%= link_to 'Back', cocktails_path %>
