--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,10 +1,10 @@
 <h1 class="text-center">All the cocktails</h1>
 
-<table>
+<table style="margin: 20px">
   <thead>
     <tr>
-      <th>Name</th>
-      <th colspan="1"></th>
+      <th>Cocktail Name </th>
+      <th colspan="3"></th>
     </tr>
   </thead>
 
@@ -12,10 +12,10 @@
   <tbody>
     <% @cocktails.each do |cocktail| %>
     <tr>
-      <td><%= cocktail.name %> |</td>
-      <td><%= link_to 'Show', cocktail_path(cocktail) %> |</td>
-      <td><%= link_to 'Edit', edit_cocktail_path(cocktail) %> |</td>
-      <td><%= link_to 'Destroy', cocktail, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      <td><%= cocktail.name %></td>
+      <td><%= link_to 'Show', cocktail_path(cocktail),class: "btn btn-info", style: "margin: 3px" %> </td>
+      <td><%= link_to 'Edit', edit_cocktail_path(cocktail), class: "btn btn-success", style: "margin: 3px" %> </td>
+      <td><%= link_to 'Destroy', cocktail, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger", style: "margin: 3px" %></td>
     </tr>
     <% end %>
   </tbody>
@@ -23,4 +23,4 @@
 
 <br>
 
-<%= link_to 'New Cocktail', new_cocktail_path %>
+<%= link_to 'New Cocktail', new_cocktail_path, class: "btn btn-primary" %>
