--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,3 +1,28 @@
-<h1 class="text-center"><%= @cocktail.name %> </h1>
+<h1 class="text-center"><%= @cocktail.name.capitalize %> </h1>
 
-<%= link_to 'Back', cocktails_path %>
+<ul>
+  <% @doses.each do |dose| %>
+  <li>
+    <%= dose.description %>
+    <%= dose.ingredient.name %>
+    <%= link_to "delete this dose", dose_path(dose.id), method: :delete, class: "btn btn-danger", style: "margin: 5px" %>
+  </li>
+  <% end %>
+</ul>
+
+
+<h3>Add an ingredient to your cocktail</h3>
+
+<%= simple_form_for ([@cocktail, @dose]) do |f| %>
+  <%= f.error_notification %>
+  <div class="form-inputs">
+    <%= f.input :description %>
+    <%= f.input :ingredient_id, collection: @ingredients %>
+  </div>
+
+  <div class="form-actions">
+    <%= f.button :submit %>
+  </div>
+<% end %>
+
+<%= link_to 'Back', cocktails_path, class: "btn btn-primary", style: "margin: 5px" %>
