--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,5 +1,5 @@
 <h1>Cocktail new</h1>
 <p>Create a new cocktail - be creative</p>
 
-<%= render 'form', cocktail: @cocktail %>
+<%= render 'cocktails/form', cocktail: @cocktail %>
 <%= link_to 'Back', cocktails_path %>
