--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -13,16 +13,29 @@
 
 <h3>Add an ingredient to your cocktail</h3>
 
-<%= simple_form_for ([@cocktail, @dose]) do |f| %>
-  <%= f.error_notification %>
-  <div class="form-inputs">
-    <%= f.input :description %>
-    <%= f.input :ingredient_id, collection: @ingredients %>
-  </div>
+<div class="container">
+  <div class="row">
+    <%= simple_form_for ([@cocktail, @dose]) do |f| %>
+    <%= f.error_notification %>
 
-  <div class="form-actions">
-    <%= f.button :submit %>
-  </div>
-<% end %>
+    <div class="form-inputs">
+      <div class="col-xs-12 col-md-6">
+        <%= f.input :description %>
+      </div>
+      <div class="col-xs-12 col-md-6">
+        <%= f.input :ingredient_id, collection: @ingredients %>
+      </div>
+    </div>
 
-<%= link_to 'Back', cocktails_path, class: "btn btn-primary", style: "margin: 5px" %>
+    <div class="form-actions">
+      <%= f.button :submit %>
+    </div>
+    <% end %>
+  </div>
+</div>
+
+<row>
+  <div class="col-xs-12 col-md-6">
+    <%= link_to 'Back', cocktails_path, class: "btn btn-primary", style: "margin: 5px" %>
+  </div>
+</row>
