--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,3 +1,7 @@
+<% content_for(:title_tag) do %>
+  Create your cocktail
+<% end %>
+
 <h1>Cocktail new</h1>
 <p>Create a new cocktail - be creative</p>
 
