--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>RailsMisterCoktail</title>
+    <title><%= yield(:title_tag).blank? ? "Mister Cocktail" : yield(:title_tag) %></title>
     <%= csrf_meta_tags %>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -10,8 +10,13 @@
   </head>
 
   <body>
+    <%=  render 'shared/navbar' %>
+
     <div class="container">
       <%= yield %>
     </div>
+
+    <%= render 'shared/footer' %>
+
   </body>
 </html>
