--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,26 +1,29 @@
-<h1 class="text-center">All the cocktails</h1>
+<!-- <h1 class="text-center">All the cocktails</h1> -->
 
-<table style="margin: 20px">
-  <thead>
-    <tr>
-      <th>Cocktail Name </th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<%= render 'shared/banner'  %>
+<div class="container">
+  <table style="margin: 20px">
+    <thead>
+      <tr>
+        <th>Cocktail Name </th>
+        <th colspan="3"></th>
+      </tr>
+    </thead>
 
 
-  <tbody>
-    <% @cocktails.each do |cocktail| %>
-    <tr>
-      <td><%= cocktail.name %></td>
-      <td><%= link_to 'Show', cocktail_path(cocktail),class: "btn btn-info", style: "margin: 3px" %> </td>
-      <td><%= link_to 'Edit', edit_cocktail_path(cocktail), class: "btn btn-success", style: "margin: 3px" %> </td>
-      <td><%= link_to 'Destroy', cocktail, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger", style: "margin: 3px" %></td>
-    </tr>
-    <% end %>
-  </tbody>
-</table>
+    <tbody>
+      <% @cocktails.each do |cocktail| %>
+      <tr>
+        <td><%= cocktail.name %></td>
+        <td><%= link_to 'Show', cocktail_path(cocktail),class: "btn btn-info", style: "margin: 3px" %> </td>
+        <td><%= link_to 'Edit', edit_cocktail_path(cocktail), class: "btn btn-success", style: "margin: 3px" %> </td>
+        <td><%= link_to 'Destroy', cocktail, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger", style: "margin: 3px" %></td>
+      </tr>
+      <% end %>
+    </tbody>
+  </table>
 
-<br>
+  <br>
 
-<%= link_to 'New Cocktail', new_cocktail_path, class: "btn btn-primary" %>
+  <%= link_to 'New Cocktail', new_cocktail_path, class: "btn btn-primary" %>
+</div>
