--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,45 +1,47 @@
 <% content_for(:title_tag) do %>
-  <%= @cocktail.name.capitalize %>
+<%= @cocktail.name.capitalize %>
 <% end %>
 
-<h1 class="text-center"><%= @cocktail.name.capitalize %> </h1>
-
-<ul>
-  <% @cocktail.doses.each do |dose| %>
-  <li>
-    <%= dose.description %>
-    <%= dose.ingredient.name %>
-    <%= link_to "delete this dose", dose_path(dose.id), {class: "btn btn-danger", method: :delete,} %>
-  </li>
-  <% end %>
-</ul>
-
-
-<h3>Add an ingredient to your cocktail</h3>
-
 <div class="container">
-  <div class="row">
-    <%= simple_form_for ([@cocktail, @dose]) do |f| %>
-    <%= f.error_notification %>
+  <h1 class="text-center"><%= @cocktail.name.capitalize %> </h1>
 
-    <div class="form-inputs">
-      <div class="col-xs-12 col-md-6">
-        <%= f.input :description %>
-      </div>
-      <div class="col-xs-12 col-md-6">
-        <%= f.input :ingredient_id, collection: @ingredients %>
-      </div>
-    </div>
-
-    <div class="form-actions text-center">
-      <%= f.button :submit %>
-    </div>
+  <ul>
+    <% @cocktail.doses.each do |dose| %>
+    <li>
+      <%= dose.description %>
+      <%= dose.ingredient.name %>
+      <%= link_to "delete this dose", dose_path(dose.id), {class: "btn btn-danger", method: :delete,} %>
+    </li>
     <% end %>
-  </div>
-</div>
+  </ul>
 
-<row>
+
+  <h3>Add an ingredient to your cocktail</h3>
+
   <div class="container">
-    <%= link_to 'Back', cocktails_path, {class: "btn btn-primary", style: "margin: 5px"} %>
+    <div class="row">
+      <%= simple_form_for ([@cocktail, @dose]) do |f| %>
+      <%= f.error_notification %>
+
+      <div class="form-inputs">
+        <div class="col-xs-12 col-md-6">
+          <%= f.input :description %>
+        </div>
+        <div class="col-xs-12 col-md-6">
+          <%= f.input :ingredient_id, collection: @ingredients %>
+        </div>
+      </div>
+
+      <div class="form-actions text-center">
+        <%= f.button :submit %>
+      </div>
+      <% end %>
+    </div>
   </div>
-</row>
+
+  <row>
+    <div class="container">
+      <%= link_to 'Back', cocktails_path, {class: "btn btn-primary", style: "margin: 5px"} %>
+    </div>
+  </row>
+</div>
