--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -3,7 +3,9 @@
 <% end %>
 
 <div class="container">
+
   <h1 class="text-center"><%= @cocktail.name.capitalize %> </h1>
+  <%= cl_image_tag @cocktail.photo, height: 300, width: 400, crop: :fill %>
 
   <ul>
     <% @cocktail.doses.each do |dose| %>
