--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -1,7 +1,7 @@
 <div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url(<%= image_path 'cocktail.jpg'%>);"%>
   <div class="banner-content">
-    <h1>Mister Cocktail</h1>
-    <p>Create your library of cocktails</p>
+    <h1>The Hipster e-bartender</h1>
+    <p>THE cocktails e-creator for hipster</p>
     <%= link_to 'New Cocktail', new_cocktail_path, class: "btn btn-primary" %>
   </div>
 </div>
